crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/huggingFace-apiKey-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `apiKey` unavailable for source `huggingFace`.\n  - note: `apiKey` is available for sources: `openAi`, `ollama`, `rest`\n  - note: available fields for source `huggingFace`: `source`, `model`, `revision`, `pooling`, `documentTemplate`, `documentTemplateMaxBytes`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/errors#invalid_settings_embedders"
}
