crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/userProvided-pooling-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `pooling` unavailable for source `userProvided`.\n  - note: `pooling` is available for sources: `huggingFace`\n  - note: available fields for source `userProvided`: `source`, `dimensions`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/errors#invalid_settings_embedders"
}
